--- a/ingredients.css
+++ b/ingredients.css
@@ -2,9 +2,9 @@
 /* CSS Document */
 
 .bun-top {
-  height: 70px;
-  width: 60%;
-  background: #e5b05a;
+  height: 50px;
+  width: 70%;
+  background: #f3aa00;
   border-radius: 100px 100px 20px 20px;
   border-bottom: solid 10px rgba(0,0,0,.1);
 }
@@ -42,22 +42,22 @@
 
 .pickle {
   height: 30px;
-  width: 50%;
-  background: #3ac67d;
-  border-radius: 0 0 100px 100px;
+  width: 60%;
+  background: #3ac67d;  
+  border-radius: 100px;
   border-bottom: solid 10px #2d9961;
 }
 
 .onion {
   width: 40%;
-  background-color: #a039bf;
+  background-color: #f0dcb2 ;
   border-top: dotted 20px rgba(255,255,255,.2);
 }
 
 .bun-bottom {
-  height: 35px;
-  width: 60%;
-  background: #e5b05a;
+  height: 25px;
+  width: 70%;
+  background: #f3aa00;
   border-radius: 20px 20px 40px 40px;
   border-top: solid 8px rgba(0,0,0,.1)
 }
