--- a/style.css
+++ b/style.css
@@ -25,6 +25,13 @@ h1 {
 
 h2 {
   text-align: center;
+  font-size: 20px;
+  font-weight: 450;
+  margin: 10px 0 30px 0;
+}
+
+h3 {
+  text-align: center;
   font-size: 25px;
   font-weight: 400;
   margin: 10px 0 30px 0;
